<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoandroid"
    android:backgroundTintMode="add"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="214dp"
        android:layout_height="205dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/dall_e_2024_10_31_15_46_44___a_modern_gym_logo_featuring_the_initials__cpa___the_logo_should_have_a_strong__athletic_feel_with_bold_letters_and_a_minimalist_design__incorporate_el"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="163dp"
        android:layout_height="34dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="84dp"
        android:text="@string/txtGymCpa"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="168dp"
        android:layout_height="17dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="28dp"
        android:text="@string/linkOlvido_su_contrasenia"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrar"
        tools:ignore="TextSizeCheck,VisualLintBounds" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="155dp"
        android:layout_height="57dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="12dp"
        android:text="@string/btnRegistrarse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciar" />

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="155dp"
        android:layout_height="57dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="24dp"
        android:text="@string/iniciar_sesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="28dp"
        android:text="@string/textContrasenia"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsuario"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="52dp"
        android:text="@string/textUsuario"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autoText="false"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="Deprecated,LabelFor,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>