<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clsTorno"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoandroid"
    tools:context=".Registrarse">

    <Button
        android:id="@+id/btnRegistrar2"
        android:layout_width="121dp"
        android:layout_height="49dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="700dp"
        android:text="@string/btnRegistrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,VisualLintBounds" />

    <ImageButton
        android:id="@+id/imageButtonChrome"
        android:layout_width="70dp"
        android:layout_height="65dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/google_chrome_icon__february_2022__svg"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextContraseñaConfirm"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/flechaVolver"
        android:layout_width="59dp"
        android:layout_height="46dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="187dp"
        android:layout_height="48dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="108dp"
        android:text="@string/nuevo_usuario"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="24dp"
        android:text="@string/correo_electronico_email"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTextCorreo"
        android:layout_width="180dp"
        android:layout_height="43dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="20dp"
        android:text="@string/nombre_usuario"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCorreo" />

    <EditText
        android:id="@+id/editTextUsuarioNuevo"
        android:layout_width="182dp"
        android:layout_height="43dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/editTextCorreo"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="20dp"
        android:text="@string/contrasenia"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsuarioNuevo"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextContraseña"
        android:layout_width="182dp"
        android:layout_height="44dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextContraseñaConfirm"
        android:layout_width="182dp"
        android:layout_height="44dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="20dp"
        android:text="@string/repite_la_contrasenia"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextContraseña"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/imageButtonFacebook"
        android:layout_width="70dp"
        android:layout_height="65dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/png_clipart_facebook_logo_facebook_computer_icons_desktop_s_icon_facebook_blue_text_thumbnail"
        android:scaleType="centerInside"
        app:layout_constraintStart_toEndOf="@+id/imageButtonChrome"
        app:layout_constraintStart_toStartOf="@+id/imageButtonChrome"
        app:layout_constraintTop_toBottomOf="@+id/editTextContraseñaConfirm"
        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>